diesel_compile_tests/tests/fail/returning_clause_requires_selectable_expression.stderr
error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of a `DeleteStmt` on `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `ValidInReturningOf<non_users::columns::noname, DeleteStmt>` is not implemented for `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:5:1
    |
  LL | / table! {
  LL | |     users {
    | |_________^
    = note: `non_users::columns::noname` is not a valid `RETURNING` element for this statement kind on this table
    = note: for `INSERT ... ON CONFLICT ... DO UPDATE`, wrap with `.nullable()` so freshly-inserted rows can return `NULL` for `old.col`
help: the following other types implement trait `ValidInReturningOf<Expr, StmtKind>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^ `users::table` implements `ValidInReturningOf<users::columns::id, __StmtKind>`
  LL |         name -> VarChar,
    |         ^^^^ `users::table` implements `ValidInReturningOf<users::columns::name, __StmtKind>`
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `DeleteStatement<table, WhereClause<...>, ...>` to implement `Query`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/delete_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> DeleteStatement<T, U, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ReturningQuerySource<..., ...> as AppearsInFromClause<...>>::Count == Once`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `Never`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<DeleteStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `DeleteStatement<table, WhereClause<...>, ...>` to implement `Query`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/delete_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> DeleteStatement<T, U, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<..., ...>: TableNotEqual<...>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `TableNotEqual<non_users::table>` is not implemented for `ReturningQuerySource<DeleteStmt, users::table>`
    = note: double check that `non_users::table` and `ReturningQuerySource<DeleteStmt, users::table>` appear in the same `allow_tables_to_appear_in_same_query!` 
            call if both are tables
help: the following other types implement trait `TableNotEqual<T>`
   --> DIESEL/diesel/diesel/src/pg/metadata_lookup.rs
    |
LL | allow_tables_to_appear_in_same_query!(pg_type, pg_namespace);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | |
    | `pg::metadata_lookup::pg_namespace::table` implements `TableNotEqual<pg::metadata_lookup::pg_type::table>`
    | `pg::metadata_lookup::pg_type::table` implements `TableNotEqual<pg::metadata_lookup::pg_namespace::table>`
    = note: required for `ReturningQuerySource<DeleteStmt, users::table>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<DeleteStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `DeleteStatement<table, WhereClause<...>, ...>` to implement `Query`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/delete_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> DeleteStatement<T, U, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`
 
        = note: this error originates in the macro `allow_tables_to_appear_in_same_query` which comes from the expansion of the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<DeleteStmt, users::table>: Table` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Table` is not implemented for `ReturningQuerySource<DeleteStmt, users::table>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Table`:
              Only<S>
              Tablesample<S, TSM>
              non_users::table
              pg::metadata_lookup::pg_namespace::table
              pg::metadata_lookup::pg_type::table
              users::table
    = note: required for `ReturningQuerySource<DeleteStmt, users::table>` to implement `QueryRelation`
    = note: required for `ReturningQuerySource<DeleteStmt, users::table>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<DeleteStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `DeleteStatement<table, WhereClause<...>, ...>` to implement `Query`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/delete_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> DeleteStatement<T, U, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of a `InsertStmtWithoutOnConflictDoUpdate` on `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:35:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `ValidInReturningOf<non_users::columns::noname, InsertStmtWithoutOnConflictDoUpdate>` is not implemented for `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:5:1
    |
  LL | / table! {
  LL | |     users {
    | |_________^
    = note: `non_users::columns::noname` is not a valid `RETURNING` element for this statement kind on this table
    = note: for `INSERT ... ON CONFLICT ... DO UPDATE`, wrap with `.nullable()` so freshly-inserted rows can return `NULL` for `old.col`
help: the following other types implement trait `ValidInReturningOf<Expr, StmtKind>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^ `users::table` implements `ValidInReturningOf<users::columns::id, __StmtKind>`
  LL |         name -> VarChar,
    |         ^^^^ `users::table` implements `ValidInReturningOf<users::columns::name, __StmtKind>`
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ReturningQuerySource<..., ...> as AppearsInFromClause<...>>::Count == Once`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:35:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `Never`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<..., ...>: TableNotEqual<...>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:35:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TableNotEqual<non_users::table>` is not implemented for `ReturningQuerySource<..., ...>`
    |          |
    |          required by a bound introduced by this call
    |
    = note: double check that `non_users::table` and `ReturningQuerySource<..., ...>` appear in the same `allow_tables_to_appear_in_same_query!` 
            call if both are tables
help: the following other types implement trait `TableNotEqual<T>`
   --> DIESEL/diesel/diesel/src/pg/metadata_lookup.rs
    |
LL | allow_tables_to_appear_in_same_query!(pg_type, pg_namespace);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | |
    | `pg::metadata_lookup::pg_namespace::table` implements `TableNotEqual<pg::metadata_lookup::pg_type::table>`
    | `pg::metadata_lookup::pg_type::table` implements `TableNotEqual<pg::metadata_lookup::pg_namespace::table>`
    = note: required for `ReturningQuerySource<..., ...>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `allow_tables_to_appear_in_same_query` which comes from the expansion of the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<..., ...>: Table` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:35:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Table` is not implemented for `ReturningQuerySource<..., ...>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Table`:
              Only<S>
              Tablesample<S, TSM>
              non_users::table
              pg::metadata_lookup::pg_namespace::table
              pg::metadata_lookup::pg_type::table
              users::table
    = note: required for `ReturningQuerySource<..., ...>` to implement `QueryRelation`
    = note: required for `ReturningQuerySource<..., ...>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of a `UpdateStmt` on `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:43:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `ValidInReturningOf<non_users::columns::noname, UpdateStmt>` is not implemented for `users::table`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:5:1
    |
  LL | / table! {
  LL | |     users {
    | |_________^
    = note: `non_users::columns::noname` is not a valid `RETURNING` element for this statement kind on this table
    = note: for `INSERT ... ON CONFLICT ... DO UPDATE`, wrap with `.nullable()` so freshly-inserted rows can return `NULL` for `old.col`
help: the following other types implement trait `ValidInReturningOf<Expr, StmtKind>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^ `users::table` implements `ValidInReturningOf<users::columns::id, __StmtKind>`
  LL |         name -> VarChar,
    |         ^^^^ `users::table` implements `ValidInReturningOf<users::columns::name, __StmtKind>`
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `UpdateStatement<table, NoWhereClause, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ReturningQuerySource<..., ...> as AppearsInFromClause<...>>::Count == Once`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:43:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `Never`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<UpdateStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `UpdateStatement<table, NoWhereClause, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<..., ...>: TableNotEqual<...>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:43:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `TableNotEqual<non_users::table>` is not implemented for `ReturningQuerySource<UpdateStmt, users::table>`
    = note: double check that `non_users::table` and `ReturningQuerySource<UpdateStmt, users::table>` appear in the same `allow_tables_to_appear_in_same_query!` 
            call if both are tables
help: the following other types implement trait `TableNotEqual<T>`
   --> DIESEL/diesel/diesel/src/pg/metadata_lookup.rs
    |
LL | allow_tables_to_appear_in_same_query!(pg_type, pg_namespace);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | |
    | `pg::metadata_lookup::pg_namespace::table` implements `TableNotEqual<pg::metadata_lookup::pg_type::table>`
    | `pg::metadata_lookup::pg_type::table` implements `TableNotEqual<pg::metadata_lookup::pg_namespace::table>`
    = note: required for `ReturningQuerySource<UpdateStmt, users::table>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<UpdateStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `UpdateStatement<table, NoWhereClause, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `allow_tables_to_appear_in_same_query` which comes from the expansion of the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ReturningQuerySource<UpdateStmt, users::table>: Table` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:43:20
    |
 LL |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Table` is not implemented for `ReturningQuerySource<UpdateStmt, users::table>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Table`:
              Only<S>
              Tablesample<S, TSM>
              non_users::table
              pg::metadata_lookup::pg_namespace::table
              pg::metadata_lookup::pg_type::table
              users::table
    = note: required for `ReturningQuerySource<UpdateStmt, users::table>` to implement `QueryRelation`
    = note: required for `ReturningQuerySource<UpdateStmt, users::table>` to implement `AppearsInFromClause<non_users::table>`
note: required for `non_users::columns::noname` to implement `AppearsOnTable<ReturningQuerySource<UpdateStmt, users::table>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
note: required for `non_users::columns::noname` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: required for `UpdateStatement<table, NoWhereClause, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
